--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
     <title>Counter</title>
     
     
   </head>
   <body>
-    <main>
+
     <div class="container">
       <h1>counter</h1>
       <span id="value">0</span>
@@ -19,10 +20,7 @@
 
       </div>
     </div>
-    </main>
 
-
-    <!-- javascript -->
     <script src="index.js"></script>
   </body>
 </html>
